k8s/database_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database-deploy 
  labels:
    name: database-deploy
    app: bootapp
spec:
  replicas: 1
  selector:
    matchLabels: 
      name: database-pod
      app: bootapp
  template:
    metadata:
      name: database-pod
      labels:
        name: database-pod
        app: bootapp
    spec:
      containers:
        - name: mysql
          image: hk328/bootapp1_db_img1:latest
          ports:
          - containerPort: 3306
---

apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  selector:
    name: database-pod
    app: bootapp
  ports:
  - port: 3306
    targetPort: 3306
