k8s/ingressFB.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fbingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: jobfind.com    
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 8080

          - path: /v1/jobs
            pathType: Prefix
            backend:
              service: 
                name: backend-service
                port:
                  number: 8000
